# hexapod

./: .clang-format  .gitignore  LICENSE  README.md  commands.md  new_version_joy.md  topic_servo_controller.md  topic_teleop.md
hexapod_brain/: CMakeLists.txt  README.md  brain_communication.pu  overview.pu  package.xml
hexapod_brain/config/: interpretation.json  parameter.yaml
hexapod_brain/include/hexapod_brain/action/: action_planner.hpp
hexapod_brain/include/hexapod_brain/handler/: callback_timer.hpp  communication.hpp  ihandler.hpp  movement.hpp
hexapod_brain/include/hexapod_brain/requester/: coordinator.hpp  error_management.hpp  irequester.hpp  recognition.hpp  simpletimer.hpp  text_interpreter.hpp
hexapod_brain/launch/: brain_launch.py
hexapod_brain/src/: node_brain.cpp
hexapod_brain/src/action/: action_planner.cpp
hexapod_brain/src/handler/: movement.cpp  system.cpp
hexapod_brain/src/requester/: coordinator.cpp  error_management.cpp  recognition.cpp  text_interpreter.cpp
hexapod_bringup/: CMakeLists.txt  package.xml
hexapod_bringup/config/: cmdvel_bridge.yaml  teleop_twist_joy.yaml
hexapod_bringup/launch/: joy_cmdvel_bridge_launch.py  joy_teleop_launch.py  target_launch.py  test_launch.py
hexapod_cmdvel_bridge/: package.xml  setup.cfg  setup.py
hexapod_cmdvel_bridge/hexapod_cmdvel_bridge/: __init__.py  cmdvel_bridge_node.py
hexapod_cmdvel_bridge/resource/: hexapod_cmdvel_bridge
hexapod_interfaces/: CMakeLists.txt  package.xml
hexapod_interfaces/msg/: JoystickRequest.msg  MovementRequest.msg  Pose.msg  ServoAngles.msg  ServoRequest.msg  ServoStatus.msg
hexapod_movement/: CMakeLists.txt  package.xml
hexapod_movement/config/: actionpackages.json  anatomy.yaml  anatomy_old.yaml
hexapod_movement/include/hexapod_movement/action/: action_executor.hpp
hexapod_movement/include/hexapod_movement/handler/: callback_timer.hpp  servohandler.hpp
hexapod_movement/include/hexapod_movement/requester/: gaitcontroller.hpp  kinematics.hpp  lowpassfilter.hpp  requester.hpp  requests.hpp
hexapod_movement/launch/: movement_launch.py
hexapod_movement/src/: node_movement.cpp
hexapod_movement/src/action/: action_executor.cpp
hexapod_movement/src/handler/: servohandler.cpp
hexapod_movement/src/requester/: actionpackagesparser.cpp  gaitcontroller.cpp  kinematics.cpp  lowpassfilter.cpp  requester.cpp
hexapod_servo_controller/: CMakeLists.txt  package.xml
hexapod_servo_controller/config/: servo_description.yaml
hexapod_servo_controller/include/hexapod_servo_controller/: maestro_protocol.hpp  servo_controller.hpp
hexapod_servo_controller/launch/: servo_controller_launch.py
hexapod_servo_controller/src/: maestro_protocol.cpp  node_servo_controller.cpp  servo_controller.cpp
hexapod_teleop/: package.xml  readme.md  setup.cfg  setup.py
hexapod_teleop/config/: teleop.yaml
hexapod_teleop/hexapod_teleop/: node_teleop.py  test_pyjoystick.py
hexapod_teleop/launch/: teleop_launch.py
oca_brain/: CMakeLists.txt  package.xml
oca_brain/config/: behavior_watch.json
oca_brain/include/oca_brain/action/: action_planner.hpp
oca_brain/include/oca_brain/handler/: movement.hpp  system.hpp
oca_brain/include/oca_brain/requester/: interpretation.hpp  utility.hpp  word.hpp
oca_brain/launch/: brain_launch.py
oca_brain/src/handler/: communication.cpp  movement.cpp
oca_brain/src/requester/: coordinator.cpp  recognition.cpp  text_interpreter.cpp
oca_bringup/: CMakeLists.txt  package.xml
oca_bringup/autostart/: autostart_ros2.service
oca_bringup/launch/: target_launch.py
oca_communication/: package.xml  readme.md  readme_old.md  setup.cfg  setup.py
oca_communication/config/: params.yaml
oca_communication/launch/: communication_launch.py
oca_communication/oca_communication/: chatbot.py  music_player.py  node_communication.py  stoppable_thread.py  stt_offline.py  stt_online.py  tts.py
oca_doc/: readme.md
oca_doc/setup_raspberry_pi/: raspi5_info.txt  setup_rpi_ubuntu_server.md
oca_hmi/: package.xml  setup.cfg  setup.py
oca_hmi/launch/: hmi_launch.py
oca_hmi/oca_hmi/: node_hmi.py
oca_interfaces/: CMakeLists.txt  package.xml
oca_interfaces/msg/: CommunicationStatus.msg  ServoAngle.msg  ServoAngles.msg  ServoDirectRequest.msg  ServoIndex.msg  ServoRequest.msg  ServoStatus.msg
oca_lidar/: CMakeLists.txt  package.xml  readme.md
oca_lidar/launch/: lidar_launch.yaml
oca_lidar/src/: node_lidar.cpp
oca_movement/: CMakeLists.txt  package.xml
oca_movement/config/: actionpackages.json
oca_movement/include/oca_movement/requester/: actionpackagesparser.hpp  kinematics.hpp  lowpassfilter.hpp  requests.hpp
oca_movement/launch/: movement_launch.py
oca_movement/src/: node_movement.cpp
oca_movement/src/action/: action_executor.cpp
oca_movement/src/handler/: servohandler.cpp
oca_movement/src/requester/: requester.cpp
oca_teleop/: package.xml  setup.cfg  setup.py
oca_teleop/launch/: teleop_launch.py
oca_teleop/oca_teleop/: node_teleop.py
scripts/: hexapod.service  install_service.sh  run_hexapod.sh  setup_workspace.sh  update_and_build.sh
