<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for hexapod robot</description>
  <maintainer email="stein.robotics@gmail.com">christian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
