<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_cmdvel_bridge</name>
  <version>0.1.0</version>
  <description>Bridge /cmd_vel and /joy to hexapod movement requests</description>
  <maintainer email="stein.robotics@gmail.com">christian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hexapod_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
