<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_movement</name>
  <version>0.1.0</version>
  <description>Gait controller and kinematics for hexapod robot</description>
  <maintainer email="stein.robotics@gmail.com">christian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>hexapod_interfaces</depend>
  <depend>nlohmann-json-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
