<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_teleop</name>
  <version>0.1.0</version>
  <description>Teleoperation node for hexapod robot using DualShock 4</description>
  <maintainer email="stein.robotics@gmail.com">christian</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>hexapod_interfaces</depend>
  <depend>python3-pygame</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
