<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oca_communication</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="stein.robotics@gmail.com">christian</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>oca_interfaces</depend>
  <depend>python3-oauth2client</depend>
  <depend>python3-pygame</depend>
  <depend>python-google-cloud-speech-pip</depend>
  <depend>python3-sounddevice-pip</depend>
  <depend>python-gTTS-pip</depend>
  <depend>libespeak-ng1</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
