<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oca_teleop</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="stein.robotics@gmail.com">christian</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>oca_interfaces</depend>
  <depend>python3-pygame</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
